@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/B-Utils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Utils/ChangeLog,v 1.14 2012/03/13 14:55:25 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Utils/ChangeLog,v 1.15 2012/03/30 17:24:26 tove Exp $
+
+*B-Utils-0.210.0 (30 Mar 2012)
+
+  30 Mar 2012; Torsten Veller <tove@gentoo.org> +B-Utils-0.210.0.ebuild:
+  Version bump
 
 *B-Utils-0.190.0 (13 Mar 2012)
 
